--- a/coffe-s-management/index.html
+++ b/coffe-s-management/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/logoD.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/img/logoD.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee's Management</title>
   </head>
